added some things to the parental control activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android ="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/game_background"
     android:gravity="left"
 
     android:orientation="horizontal">
@@ -8,7 +9,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
         <ImageButton
             android:id="@+id/settings_button"
@@ -24,6 +25,13 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/lock_icon" />
+        <Button
+            android:id="@+id/exit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/settings_button"
+            android:text = "@string/exit_button"/>
 
     </RelativeLayout>
 
