--- a/app/src/main/res/layout/activity_parental_control.xml
+++ b/app/src/main/res/layout/activity_parental_control.xml
@@ -2,12 +2,62 @@
     xmlns:tools = "http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="horizontal"
+    android:background="@drawable/game_background"
     tools:context="edu.bu.ec500c1.tasterchallengeandroid.ParentalControl">
 
+
+
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/back_button_icon"
+        android:layout_gravity="bottom"/>
+
+    <EditText
+        android:id="@+id/pin_key"
+        android:layout_width="wrap_content"
+        android:layout_height="53dp"
+        android:layout_gravity="center_vertical"
+        android:inputType="number|textPassword"
+        android:gravity="center_horizontal"
+        android:hint="2832"
+        />
+
     <TextView
+        android:id="@+id/access_text"
+        android:layout_width="260dp"
+        android:layout_height="130dp"
+        android:text = "@string/access_text"
+        android:gravity="center_vertical|fill_vertical"
+        />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="enter"
+        android:id="@+id/enter_button"
+        android:layout_gravity="center_vertical"/>
+
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="116dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/reset_button"
+        android:layout_gravity="bottom"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/parent_toast"/>
+        android:gravity = "left"
+        android:orientation = "horizontal" >
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
