--- a/app/src/main/res/layout/video_item_layout.xml
+++ b/app/src/main/res/layout/video_item_layout.xml
@@ -5,9 +5,16 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/preprocessed_image"
+        android:id="@+id/video1_image"
+        android:gravity="center"
         android:layout_width="50dip"
         android:layout_height="50dip"
-        />
+        android:layout_gravity="center_horizontal" />
+    <ImageView
+        android:id="@+id/video2_image"
+        android:gravity="center"
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
