--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -6,15 +6,46 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.bu.ec500c1.tasterchallengeandroid.VideoPlayerActivity">
+    tools:context="edu.bu.ec500c1.tasterchallengeandroid.VideoPlayerActivity"
+    android:orientation="vertical"
+    android:layout_gravity="start"
+    android:background="@drawable/education_background">
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/video_container"
-        ></RelativeLayout>
+        >
 
     <VideoView
-        android:layout_width="1000dp"
-        android:layout_height="1000dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:id="@+id/video_player"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@id/video_container"
+        android:background="@android:color/white">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/selection_group">
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/selection_0"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/selection_1"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/selection_2"/>
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/selection_3"/>
+        </RadioGroup>
+    </RelativeLayout>
 </RelativeLayout>
