--- a/app/src/main/res/layout/video_item_layout.xml
+++ b/app/src/main/res/layout/video_item_layout.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="left">
 
     <ImageView
         android:id="@+id/video1_image"
-        android:gravity="center"
+        android:gravity="left"
+        android:layout_marginLeft="180dip"
         android:layout_width="100dip"
         android:layout_height="100dip"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="left" />
 
 </LinearLayout>
